syntax = "proto3";
package lb.rps.v1;

option go_package = "github.com/0xlb/rpschain/x/rps/types";

import "cosmos_proto/cosmos.proto";

// Params defines the parameters of the module.
message Params { uint64 ttl = 1; }

// Game defines the Rock, Paper & Scissors game object
message Game {
  uint64 game_number = 1;
  string player_a = 2 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
  string player_b = 3 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
  string status = 4;
  uint64 rounds = 5;
  repeated string player_a_moves = 6;
  repeated string player_b_moves = 7;
  repeated uint64 score = 8;
  uint64 expiration_height = 9;
}